# rustlang

./: .gitignore  README.md
calculator/src/: main.rs
example-01/: Cargo.toml
example-01/src/: main.rs
example-02/: Cargo.toml
example-02/src/: main.rs
example-03/: Cargo.toml
example-03/src/: main.rs
example-04/: Cargo.toml
example-04/src/: main.rs
example-05/: Cargo.toml
example-05/src/: main.rs
example-06/: Cargo.toml
example-06/src/: main.rs
example-07/: Cargo.toml
example-07/src/: main.rs
example-08/: Cargo.toml
example-08/src/: main.rs
guessing_game/src/: main.rs
my_pocket/: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
my_pocket/src/: main.rs
my_pocket/src/api/: health_checker_api.rs  mod.rs  pocket_api.rs  tag_api.rs
my_pocket/src/models/: mod.rs  pocket_model.rs  tag_model.rs
my_pocket/src/repository/: mongodb_repo.rs
my_pocket/src/requests/: mod.rs  pocket_request.rs
rectangle/src/: main.rs
remove_duplicates/src/: main.rs
xitcode/: Cargo.toml  challenges.txt  languages.txt
xitcode/src/: main.rs
